testsuite/tests/properties/invalid_eq/node_bool.lkt
import common

class Example: FooNode {
    @export fun prop(): Bool = node == true
}
